Beta-5:
  - Pipe commands, see readme for details.
  - Writes into EA thumbnail of first page of document.
  - PDF plugin: freetype library updated to version 2.2.1.
  - Optimized unicode conversion, fixes crash in uconv.dll (closed ticket #97).
  - Updated NLS-files: Spanish, German...

Beta-4:
  - Added 'Zoom In/Out' button to zoom in/out with mouse click/ctrl+click.
  - Replace ligatures when converting text from unicode to system 
    codepage (closed ticket #45).
  - Poppler (pdf rendering) library updated to version 0.5.4.
  - Lucide's internationalization now respects 'territory' modifier.
  - Fixed crash on PDF load during fonts enumeration on font files which
    FreeType doesn't understand (closed ticket #83).
  - Prevent Lucide from close on broken JPEGs (closed ticket #80).
  - In single-page view pressing PgUp/PgDn if already at top/bottom of page
    moves to previous/next page (closed ticket #73).
  - Enable printing in reverse order (closed ticket #88).
  - Lucide.exe loads needed DLLs from install path (closed ticket #78).
  - WarpIn installation optionally sets Lucide as default program for
    PDF files (closed tickets #74, #79).
  - Internal fixes.
  - Added NLS-files: Spanish, Traditional Chinese (Taiwan), Danish.
  - Updated NLS-files: Dutch, German, Swedish.


Beta-3:
  - Added basic printing features, you may print documents as image or
    as postscript on postscript-capable printers.
  - Fixed scrolling problem introduced in beta2 (closed tickets #53, #56, #64).
  - Drawing fixes and improvements (closed ticket #69).
  - Added 'Go to page' dialog, 'Save As...' menuitem works.
  - Djvu plugin improvements, get rid of ddjvuapi.dll.
  - Ability to compile plugins with gcc.
  - Fixes for font substitution (closed ticket #70).
  - NLS-files updates.
  

Beta-2:
  - Avoided using of fontconfig library, created replacement, testing
    needed (closed tickets #30, #32, #35).
  - New application icon and toolbar bitmaps.
  - Implemented rotation.