@@ -26,6 +26,7 @@ MENU IDM_MAINMENU
 BEGIN
     SUBMENU "MENU_DOCUMENT", 100
     BEGIN
+        MENUITEM "MENU_NEW_WINDOW", CM_NEW_WINDOW
         MENUITEM "MENU_OPEN", CM_OPEN
         MENUITEM "MENU_SAVE_AS", CM_SAVEAS
         MENUITEM SEPARATOR
