@@ -1,6 +1,7 @@
 Beta-5:
   - Pipe commands, see readme for details.
   - Writes into EA thumbnail of first page of document.
+  - 'New window' menuitem.
   - PDF plugin: freetype library updated to version 2.2.1.
   - Optimized unicode conversion, fixes crash in uconv.dll (closed ticket #97).
   - Updated NLS-files: Spanish, German...
